prevent jumping of menu bar

--- a/doc/css/default.css
+++ b/doc/css/default.css
@@ -97,7 +97,7 @@ a img {
   margin-bottom: 30px;
 }
 .addthis_horizontal_follow_toolbox {
-  margin-top: 50px;
+  margin-top: 40px;
 }
 .keyPoint {
   font-size: 13pt;
